orcid-web/src/main/webapp/static/css/orcid.new.css
/* ... */
/* Works popovers */

ul.sources-actions > li,
ul.sources-options > li,
ul.workspace-private-toolbar > li {
    position: relative;
}

.popover-tooltip {
    display: inline;
    font-size: 12px;
    white-space: nowrap;
    padding: 2px;
}

ul.workspace-private-toolbar > li .popover-tooltip > .arrow {
    left: 47px;
}

ul.sources-options > li .popover-tooltip > .arrow,
ul.sources-actions > li .popover-tooltip > .arrow {
    left: 64px;
}

.workspace-toolbar .works-details .show-hide-details-popover {
    top: -38px;
    left: -33px;
    color: #494A4C;
}

.popover-content strong {
    color: #494A4C;
}

.workspace-top .popover-help-container .popover.privacy-myorcid3,
.workspace-top .popover-help-container .popover.privacy-myorcid3:hover {
    top: -143px;
    left: -138px;
    min-width: 242px;
    width: auto;
}

.popover-help-container > .privacy-myorcid3 >.arrow {
    left: 186px;
}

.source-line .sources-popover {
    top: -35px;
    left: 74px;
}

ul.sources-options .delete-group-popover,
ul.sources-options .delete-source-popover,
.trash-source .delete-activeSource-popover,
ul.sources-actions .delete-inactiveSource-popover {
    top: -41px;
    left: -58px;
}

ul.sources-options .edit-source-popover,
.trash-source .edit-activeSource-popover,
ul.sources-actions .edit-inactiveSource-popover {
    top: -41px;
    left: -60px;
}

.two-lines {
    top: -57px !important;
}

ul.sources-options .combine-duplicates-popover,
ul.sources-actions .combine-inactiveDuplicates-popover,
ul.sources-actions .combine-activeDuplicates-popover {
    top: -41px;
    left: -57px;
}

ul.workspace-private-toolbar .popover-help-container {
    position: static;
}

ul.workspace-private-toolbar .popover-help-container .popover .popover-content a {
    white-space: nowrap;
}

ul.workspace-private-toolbar .popover-help-container .popover {
    max-width: none;
    width: auto;
}

.full-height-row {
    display: -webkit-box;
    display: -webkit-flex;
    display: flex;
    flex: 1 0 auto;
}


/* Bulk Edit Pop up */

.bulk-delete-modal {
    width: 550px;
}

.bulk-delete-modal h3,
.bulk-delete-modal p {
    color: #494A4C;
}

.bulk-delete-modal button {
    color: #FFF;
    margin-left: 15px;
}

.dark-grey {
    color: #494A4C;
}

.bibtex-work-title {
    line-height: 30px;
}

.clear-fix {
    clear: both;
}

.qrcode-container,
.print-orcid-record {
    display: block;
    width: 100%;
    float: left;
    margin: 10px 0;
}

.qrcode-container .orcid-qr,
.print-orcid-record .glyphicons-print {
    padding-right: 19px;
    padding-left: 0;
}

.qrcode-container .orcid-qr:before,
.print-orcid-record .glyphicons-print:before {
    color: #338caf;
    top: -10px;
    font: 16px/1em 'Glyphicons Regular'
}

.qrcode-container a,
.print-orcid-record a {
    color: #338caf;
}

.qrcode-container a:hover,
.qrcode-container a:hover span:before,
.print-orcid-record a:hover,
.print-orcid-record a:hover span:before {
    color: #a6ce39;
}

.qrcode-container a:focus,
.print-orcid-record a:focus {
    text-decoration: none;
}

.bio-edit {
    margin-bottom: 5px;
    height: 30px;
}

.cancel {
    margin-right: 15px;
}

.workspace-toolbar .vis-issue {
    float: right;
    line-height: 0px;
    height: 16px;
    width: 16px;
    display: block;
    cursor: auto;
}

.workspace-toolbar .vis-issue .glyphicons {
    padding-left: 0;
    margin-right: 15px;
}

.workspace-toolbar .vis-issue .glyphicons.circle_exclamation_mark:before {
    font-size: 16px;
    color: #F3C01F;
}

.workspace-toolbar .vis-popover .popover-content {
    width: 100%;
    word-wrap: break-word;
    min-height: 50px;
    height: auto;
    display: block;
    white-space: normal;
    line-height: 15px;
}

.workspace-toolbar .popover.vis-popover {
    top: 26px;
}

.bulk-edit-delete .bulk-edit-popover {
    top: -40px;
    left: -59px;
    position: absolute;
}

.bulk-edit-delete .bulk-edit-popover .arrow {
    left: 72px;
}

.full-width-input {
    width: 100%;
}


/*Angular Multiselect*/

multiselect .dropdown-menu {
    padding-left: 5px;
    padding-right: 5px;
    display: none;
}

multiselect .dropdown-menu .dropdown-menu-list>li>a {
    padding: 3px 10px;
    cursor: pointer;
}

multiselect .dropdown-menu .dropdown-menu-list>li>a:hover {
    color: #000;
}

multiselect .dropdown-menu .dropdown-menu-list>li>a i.empty {
    min-width: 14px;
}

multiselect .dropdown-menu .dropdown-menu-list {
    height: 135px;
    min-width: 315px;
    overflow-y: scroll;
}


/* New Style not related to myorcid3 */

#register-buttons {
    margin-bottom: 15px;
}

.oneStepWidth {
    max-width: 500px !important;
    /* forcing temporally */
}

.clearfix {
    clear: both;
}

.confirm-oauth-access .id-banner .full-name,
.confirm-oauth-access .id-banner .dropdown,
.confirm-oauth-access .id-banner-container a.id-banner-switch {
    padding-right: 0;
}

.confirm-oauth-access .id-banner .id-banner-container a.id-banner-switch span {
    margin: 0;
}

#workspace-publications .cancel-bibtex {
    margin-left: 5px;
    vertical-align: 6px;
}

.add-funding .bottomBuffer,
.add-work .bottomBuffer {
    margin-bottom: 20px;
}

.confirm-oauth-access .popover,
.oauth-signin-register .popover {
    top: 22px;
    left: 0;
}

.confirm-oauth-access .lightbox-container,
.oauth-signin-register .popover {
    padding-bottom: 5px;
}

.confirm-oauth-access .popover.bottom .arrow,
.oauth-signin-register .popover.bottom .arrow {
    left: 17px;
}

.confirm-oauth-access .inline,
.oauth-signin-register .inline {
    display: block !important;
}

.confirm-oauth-access .scopeLongDesc,
.oauth-signin-register .scopeLongDesc {
    display: none;
}

.confirm-oauth-access ul.oauth-scopes li,
.oauth-signin-register ul.oauth-scopes li {
    cursor: pointer;
}

.persistent-token-note {
    font-size: 14px;
    font-style: italic;
}

.confirm-oauth-access ul.oauth-icons,
.oauth-signin-register ul.oauth-icons {
    padding: 0;
}

.close-account-container h4 {
    margin-top: 20px;
    margin-bottom: 0;
}
/* ... */

